# OneShotGRPO

./: CLAUDE.md  EducationalGRPO.ipynb  OneShotAquaRAT.ipynb  PublicWorkingGRPO copy.ipynb  PublicWorkingGRPO.ipynb  README.md  StoneyGRPO.ipynb  hf_grpotuned_pipeline.py  inspect_grpo_signature.py  pyproject.toml
configs/: math_grpo.yaml
docs/: GOOGLE_CLOUD_STORAGE.md  GRADIO_DEPLOYMENT.md  PRIME_INTELLECT.md  README.md  WANDB_VISUALIZATION.md  math_grpo.md
src/oneshot_grpo/: __init__.py
src/oneshot_grpo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/oneshot_grpo/data/: __init__.py  gsm8k.py
src/oneshot_grpo/eval/: __init__.py
src/oneshot_grpo/inference/: __init__.py  pipeline.py
src/oneshot_grpo/rewards/: __init__.py  math.py
src/oneshot_grpo/train/: __init__.py  grpo.py  math_pipeline.py  run_math_grpo.py
wandb/run-20251009_143907-1vvw5i7h/files/: requirements.txt  wandb-metadata.json
